--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,18 @@
         app:layout_constraintTop_toBottomOf="@+id/zipcode_editText"
         app:layout_constraintVertical_bias="0.024" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/forecastListRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="#D2BFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submit_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
