--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,71 +2,49 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/title_text_height"
-        android:text="Enter your Zipcode"
-        app:layout_constraintBottom_toTopOf="@+id/zipcode_editText"
-        app:layout_constraintEnd_toEndOf="@+id/zipcode_editText"
-        app:layout_constraintHorizontal_bias="0.578"
-        app:layout_constraintStart_toStartOf="@+id/zipcode_editText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/zipcodeentrysize"
-        android:layout_height="@dimen/zipcodeentrysize"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.934"
-        app:srcCompat="@drawable/ic_baseline_location_on_24" />
-
-    <EditText
-        android:id="@+id/zipcode_editText"
-        android:layout_width="87dp"
-        android:layout_height="33dp"
-        android:hint="Submit Zipcode"
-        android:inputType="number"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.279" />
+        app:titleTextColor="@color/white"/>
 
-    <Button
-        android:id="@+id/submit_button"
-        android:layout_width="124dp"
-        android:layout_height="43dp"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/zipcode_editText"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toStartOf="@+id/zipcode_editText"
-        app:layout_constraintTop_toBottomOf="@+id/zipcode_editText"
-        app:layout_constraintVertical_bias="0.024" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/forecastListRecyclerView"
+    <fragment
+        android:id="@+id/nav_host_fragement"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#D2BFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/bottomnavigtion"
+        app:layout_constraintVertical_bias="0.0"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/main_nav"
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigtion"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#00796B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/submit_button" />
+        app:menu="@menu/main_nav_"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
