--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@color/forecast_item_baackground"
-    android:foreground="?attr/selectableItemBackground"
+    android:background="#D0FDF9"
     android:clickable="true"
+    android:foreground="?attr/selectableItemBackground"
+
     >
 
     <TextView
@@ -16,13 +17,12 @@
         android:layout_marginStart="28dp"
         android:text="70.0"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.269"
-        app:layout_goneMarginStart="24dp"
-        android:textColor="@color/white"
-        />
+        app:layout_goneMarginStart="24dp" />
 
     <TextView
         android:id="@+id/descriptionText"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="260dp"
         android:text="Partly Cloudy"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
