--- a/app/src/main/res/layout/fragment_current_forecast_fragement.xml
+++ b/app/src/main/res/layout/fragment_current_forecast_fragement.xml
@@ -7,17 +7,7 @@
     tools:context=".forecast.CurrentForecastFragement">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/forecastListRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#00827717"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.64"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_daily_forecast" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
@@ -29,6 +19,36 @@
         android:src="@drawable/ic_baseline_location_on_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/locationName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toEndOf="@+id/currentImg"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Karachi" />
+
+    <TextView
+        android:id="@+id/mytemptext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/locationName"
+        app:layout_constraintStart_toStartOf="@+id/locationName"
+        app:layout_constraintTop_toBottomOf="@+id/locationName"
+        tools:text="72.0" />
+
+    <ImageView
+        android:id="@+id/currentImg"
+        android:layout_width="126dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_baseline_wb_cloudy_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
