--- a/app/src/main/res/layout-sw600dp/fragment_current_forecast_fragement.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_current_forecast_fragement.xml
@@ -7,12 +7,14 @@
     tools:context=".forecast.CurrentForecastFragement">
 
 
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="216dp"
         android:clickable="true"
         android:src="@drawable/ic_baseline_location_on_24"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,11 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/currentImg"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.35000002"
         tools:text="Karachi"
         tools:visibility="visible" />
 
@@ -35,6 +39,7 @@
         android:id="@+id/mytemptext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/locationName"
         app:layout_constraintStart_toStartOf="@+id/locationName"
@@ -61,7 +66,7 @@
         android:layout_marginEnd="16dp"
         android:text="Enter zipcode to see current weather"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
