--- a/app/src/main/res/layout/fragment_location_entryk.xml
+++ b/app/src/main/res/layout/fragment_location_entryk.xml
@@ -11,24 +11,21 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/title_text_height"
+        android:layout_marginTop="8dp"
         android:text="Enter your Zipcode"
-        app:layout_constraintBottom_toTopOf="@+id/zipcode_editText"
-        app:layout_constraintEnd_toEndOf="@+id/zipcode_editText"
-        app:layout_constraintHorizontal_bias="0.513"
-        app:layout_constraintStart_toStartOf="@+id/zipcode_editText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.942" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="@dimen/zipcodeentrysize"
         android:layout_height="@dimen/zipcodeentrysize"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="@+id/textView"
+        android:layout_marginTop="176dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_baseline_location_on_24" />
 
     <EditText
@@ -36,16 +33,12 @@
         android:layout_width="87dp"
         android:layout_height="33dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="176dp"
         android:hint="Submit Zipcode"
         android:inputType="number"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragementContainer"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/submit_button"
@@ -53,11 +46,8 @@
         android:layout_height="43dp"
         android:text="Submit"
         android:textColorLink="#FFA000"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/zipcode_editText"
-        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="@+id/zipcode_editText"
-        app:layout_constraintTop_toBottomOf="@+id/zipcode_editText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/zipcode_editText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
